Migrate to mojmap