@@ -6,24 +6,29 @@ import io.github.jerozgen.itemhunt.game.ItemHuntGame;
 import io.github.jerozgen.itemhunt.game.ItemHuntSidebarWidget;
 import io.github.jerozgen.itemhunt.game.ItemHuntTexts;
 import io.github.jerozgen.itemhunt.game.ObtainedItemsGui;
-import net.minecraft.component.DataComponentTypes;
-import net.minecraft.component.type.NbtComponent;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.boss.BossBar;
-import net.minecraft.entity.effect.StatusEffectInstance;
-import net.minecraft.entity.effect.StatusEffects;
-import net.minecraft.entity.player.PlayerInventory;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.network.packet.s2c.play.*;
-import net.minecraft.registry.entry.RegistryEntry;
-import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.sound.SoundCategory;
-import net.minecraft.sound.SoundEvents;
-import net.minecraft.text.Text;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.network.protocol.game.ClientboundBundlePacket;
+import net.minecraft.network.protocol.game.ClientboundInitializeBorderPacket;
+import net.minecraft.network.protocol.game.ClientboundSetSubtitleTextPacket;
+import net.minecraft.network.protocol.game.ClientboundSetTitleTextPacket;
+import net.minecraft.network.protocol.game.ClientboundSetTitlesAnimationPacket;
+import net.minecraft.network.protocol.game.ClientboundSoundEntityPacket;
+import net.minecraft.world.item.component.CustomData;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.BossEvent;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.entity.player.Inventory;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.core.Holder;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.sounds.SoundSource;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.network.chat.Component;
 import net.minecraft.util.Util;
-import net.minecraft.world.GameMode;
+import net.minecraft.world.level.GameType;
 import xyz.nucleoid.plasmid.api.game.GameActivity;
 import xyz.nucleoid.plasmid.api.game.GameCloseReason;
 import xyz.nucleoid.plasmid.api.game.common.GlobalWidgets;
@@ -60,7 +65,7 @@ public class ItemHuntActivePhase extends ItemHuntPhase {
     @Override
     protected void setupPhase(GameActivity activity) {
         var widgets = GlobalWidgets.addTo(activity);
-        bossbar = widgets.addBossBar(Text.empty(), BossBar.Color.BLUE, BossBar.Style.PROGRESS);
+        bossbar = widgets.addBossBar(Component.empty(), BossEvent.BossBarColor.BLUE, BossEvent.BossBarOverlay.PROGRESS);
         sidebar = widgets.addWidget(new ItemHuntSidebarWidget(ItemHuntTexts.itemsObtained()));
         sidebar.show();
 
@@ -78,58 +83,58 @@ public class ItemHuntActivePhase extends ItemHuntPhase {
         singleplayer = game.gameSpace().getPlayers().participants().size() == 1;
 
         for (var player : game.gameSpace().getPlayers().participants()) {
-            player.getInventory().clear();
-            player.playerScreenHandler.getCraftingInput().clear();
-            player.currentScreenHandler.setCursorStack(ItemStack.EMPTY);
-            player.currentScreenHandler.sendContentUpdates();
-            player.playerScreenHandler.onContentChanged(player.getInventory());
+            player.getInventory().clearContent();
+            player.inventoryMenu.getCraftSlots().clearContent();
+            player.containerMenu.setCarried(ItemStack.EMPTY);
+            player.containerMenu.broadcastChanges();
+            player.inventoryMenu.slotsChanged(player.getInventory());
 
-            player.changeGameMode(GameMode.SURVIVAL);
+            player.setGameMode(GameType.SURVIVAL);
 
-            player.addStatusEffect(new StatusEffectInstance(StatusEffects.NIGHT_VISION, -1, 0, false, false));
-            player.addStatusEffect(new StatusEffectInstance(StatusEffects.CONDUIT_POWER, -1, 0, false, false));
-            player.addStatusEffect(new StatusEffectInstance(StatusEffects.DOLPHINS_GRACE, -1, 0, false, false));
+            player.addEffect(new MobEffectInstance(MobEffects.NIGHT_VISION, -1, 0, false, false));
+            player.addEffect(new MobEffectInstance(MobEffects.CONDUIT_POWER, -1, 0, false, false));
+            player.addEffect(new MobEffectInstance(MobEffects.DOLPHINS_GRACE, -1, 0, false, false));
 
             game.config().startItems().ifPresent(stacks -> stacks.forEach(stack -> {
                 var stackCopy = stack.copy();
-                stackCopy.set(DataComponentTypes.CUSTOM_DATA, NbtComponent.DEFAULT);
-                player.getInventory().insertStack(stackCopy);
+                stackCopy.set(DataComponents.CUSTOM_DATA, CustomData.EMPTY);
+                player.getInventory().add(stackCopy);
             }));
 
-            itemsCollectedByPlayers.put(player.getUuid(), new LinkedHashSet<>());
-            sidebar.setLine(player.getNameForScoreboard(), 0);
+            itemsCollectedByPlayers.put(player.getUUID(), new LinkedHashSet<>());
+            sidebar.setLine(player.getScoreboardName(), 0);
 
             game.stat(stats -> stats.forPlayer(player).increment(StatisticKeys.GAMES_PLAYED, 1));
         }
 
-        game.world().getEntitiesByType(EntityType.ITEM, Entity::isAlive).forEach(x -> x.kill(game.world()));
+        game.world().getEntities(EntityType.ITEM, Entity::isAlive).forEach(x -> x.kill(game.world()));
         game.world().getWorldBorder().setSize(99999);
 
-        startTime = Util.getMeasuringTimeMs();
+        startTime = Util.getMillis();
         endTime = startTime + TimeUnit.SECONDS.toMillis(game.config().duration());
     }
 
     private JoinAcceptorResult acceptPlayer(JoinAcceptor offer) {
-        return offer.teleport(game.world(), game.spawnPos().toCenterPos()).thenRunForEach(player -> {
-            player.changeGameMode(GameMode.SPECTATOR);
+        return offer.teleport(game.world(), game.spawnPos().getCenter()).thenRunForEach(player -> {
+            player.setGameMode(GameType.SPECTATOR);
         });
     }
 
-    private void addPlayer(ServerPlayerEntity player) {
-        player.networkHandler.sendPacket(new WorldBorderInitializeS2CPacket(game.world().getWorldBorder()));
+    private void addPlayer(ServerPlayer player) {
+        player.connection.send(new ClientboundInitializeBorderPacket(game.world().getWorldBorder()));
     }
 
-    private void removePlayer(ServerPlayerEntity player) {
+    private void removePlayer(ServerPlayer player) {
         if (!singleplayer)
             game.stat(stats -> stats.forPlayer(player).increment(StatisticKeys.GAMES_LOST, 1));
-        itemsCollectedByPlayers.remove(player.getUuid());
-        sidebar.removeLine(player.getNameForScoreboard());
+        itemsCollectedByPlayers.remove(player.getUUID());
+        sidebar.removeLine(player.getScoreboardName());
         if (itemsCollectedByPlayers.isEmpty())
             game.gameSpace().close(GameCloseReason.FINISHED);
     }
 
     private void tick() {
-        var secondsLeft = (int) TimeUnit.MILLISECONDS.toSeconds(endTime - Util.getMeasuringTimeMs());
+        var secondsLeft = (int) TimeUnit.MILLISECONDS.toSeconds(endTime - Util.getMillis());
         if (secondsLeft != lastSecondsLeft) {
             lastSecondsLeft = secondsLeft;
 
@@ -138,7 +143,7 @@ public class ItemHuntActivePhase extends ItemHuntPhase {
 
             if (secondsLeft <= 10) {
                 if (secondsLeft > 0) for (var player : game.gameSpace().getPlayers()) {
-                    player.networkHandler.sendPacket(new PlaySoundFromEntityS2CPacket(RegistryEntry.of(SoundEvents.UI_BUTTON_CLICK.value()), SoundCategory.PLAYERS, player, .6f, 1, player.getEntityWorld().getRandom().nextLong()));
+                    player.connection.send(new ClientboundSoundEntityPacket(Holder.direct(SoundEvents.UI_BUTTON_CLICK.value()), SoundSource.PLAYERS, player, .6f, 1, player.level().getRandom().nextLong()));
                 }
                 else this.end();
             }
@@ -153,19 +158,19 @@ public class ItemHuntActivePhase extends ItemHuntPhase {
                 .toList();
         if (!winners.isEmpty()) {
             var server = game.world().getServer();
-            var winner = winners.get(0);
+            var winner = winners.getFirst();
             var winnerItems = new ArrayList<>(itemsCollectedByPlayers.get(winner));
             var guiTitleText = ItemHuntTexts.guiTitle(winner, server);
             var winText = ItemHuntTexts.win(winners, maxSize, singleplayer, server);
             for (var player : game.gameSpace().getPlayers().participants()) {
-                var isWinner = player.getUuid().equals(winner);
+                var isWinner = player.getUUID().equals(winner);
                 if (singleplayer) {
-                    if (isWinner) player.sendMessage(ItemHuntTexts.winSingleplayer(maxSize));
-                    else player.sendMessage(winText, false);
+                    if (isWinner) player.sendSystemMessage(ItemHuntTexts.winSingleplayer(maxSize));
+                    else player.displayClientMessage(winText, false);
                 } else {
                     if (isWinner) game.stat(stats -> stats.forPlayer(player).increment(StatisticKeys.GAMES_WON, 1));
                     else game.stat(stats -> stats.forPlayer(player).increment(StatisticKeys.GAMES_LOST, 1));
-                    player.sendMessage(winText, false);
+                    player.displayClientMessage(winText, false);
                 }
                 new ObtainedItemsGui(player, guiTitleText, winnerItems).open();
             }
@@ -174,21 +179,21 @@ public class ItemHuntActivePhase extends ItemHuntPhase {
         game.gameSpace().setActivity(endingPhase::setup);
     }
 
-    private void onInventoryChanged(ServerPlayerEntity player, PlayerInventory inventory, ItemStack stack) {
-        if (!itemsCollectedByPlayers.containsKey(player.getUuid())) return;
+    private void onInventoryChanged(ServerPlayer player, Inventory inventory, ItemStack stack) {
+        if (!itemsCollectedByPlayers.containsKey(player.getUUID())) return;
         if (stack.isEmpty()) return;
-        if (stack.contains(DataComponentTypes.CUSTOM_DATA)) return;
+        if (stack.has(DataComponents.CUSTOM_DATA)) return;
 
-        var collectedItems = itemsCollectedByPlayers.get(player.getUuid());
+        var collectedItems = itemsCollectedByPlayers.get(player.getUUID());
         var item = stack.getItem();
         if (collectedItems.add(item)) {
             game.stat(stats -> stats.forPlayer(player).increment(ITEMS_OBTAINED_STAT_KEY, 1));
-            sidebar.setLine(player.getNameForScoreboard(), collectedItems.size());
-            player.networkHandler.sendPacket(new BundleS2CPacket(List.of(
-                    new TitleFadeS2CPacket(0, 20, 10),
-                    new TitleS2CPacket(Text.of("")),
-                    new SubtitleS2CPacket(ItemHuntTexts.itemObtained(item)),
-                    new PlaySoundFromEntityS2CPacket(RegistryEntry.of(SoundEvents.BLOCK_NOTE_BLOCK_BELL.value()), SoundCategory.PLAYERS, player, 1, 1, player.getEntityWorld().getRandom().nextLong()))));
+            sidebar.setLine(player.getScoreboardName(), collectedItems.size());
+            player.connection.send(new ClientboundBundlePacket(List.of(
+                    new ClientboundSetTitlesAnimationPacket(0, 20, 10),
+                    new ClientboundSetTitleTextPacket(Component.nullToEmpty("")),
+                    new ClientboundSetSubtitleTextPacket(ItemHuntTexts.itemObtained(item)),
+                    new ClientboundSoundEntityPacket(Holder.direct(SoundEvents.NOTE_BLOCK_BELL.value()), SoundSource.PLAYERS, player, 1, 1, player.level().getRandom().nextLong()))));
         }
     }
 }
